fixed alignment in a css bracket

--- a/www/metaboshiny.css
+++ b/www/metaboshiny.css
@@ -364,7 +364,7 @@ $buttonColor: rgba(255,255,255,1);
   border-top: 5px solid;
   border-top-right-radius: 20px;
   margin-left: 30%;
-  margin-top: 16px;    
+  margin-top: 15.5px;    
 }
 
 #right:before
@@ -372,7 +372,7 @@ $buttonColor: rgba(255,255,255,1);
   border-top: 5px solid;
   border-top-left-radius: 20px;
   margin-left: -10%;
-  margin-top: 16px;
+  margin-top: 15.5px;
 }
 
 #right:after
